Bug 170102 - FILESAVE PowerPoint's Title and Content layout doesn't survive PPTX->ODP->PPTX conversion correctly
Summary: FILESAVE PowerPoint's Title and Content layout doesn't survive PPTX->ODP->PPT...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Aron Budea
URL:
Whiteboard: target:26.8.0 target:26.2.0.2 target:...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Slide-Layout PPTX-MasterSlide
  Show dependency treegraph
 
Reported: 2025-12-23 16:19 UTC by Aron Budea
Modified: 2025-12-29 09:55 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
ODP saved from PPTX (20.34 KB, application/vnd.oasis.opendocument.presentation)
2025-12-24 10:47 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2025-12-23 16:19:59 UTC
- Open attachment 204770 [details], a PPTX from bug 17010,
- Save as ODP and reload, (this is still OK)
- Save as PPTX and reload, or load it in PowerPoint.

=> Note the weird placeholder in the background.

This is a regression from bug 169825's fix, and is related to bug 170101.
Comment 1 Commit Notification 2025-12-23 19:18:01 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/04e5572c796b63da94aedbd07b2b7bd972422161

tdf#170102 PP's Title and Content layout exported incorrectly

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-12-23 23:31:22 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/d299526cb6e87e277219f062419b243a5b5e27f0

tdf#170102 PP's Title and Content layout exported incorrectly

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Aron Budea 2025-12-24 10:47:04 UTC
Created attachment 204789 [details]
ODP saved from PPTX

Attaching the ODP saved from original PPTX for reference (state after step 2).
Comment 4 Commit Notification 2025-12-24 11:21:34 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/817e1c5289c353f20c9fdf148684b44b31790cab

tdf#170102 PP's Title and Content layout exported incorrectly

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-12-26 06:16:42 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e54b0825f75bcb57b1f8b4c9ac0d85bccc688532

tdf#170102 add unit test

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-12-29 09:55:05 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/69645bb302f715043b5a13ff0f48478e6132e32f

tdf#170102 add unit test

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.