tdf#170102 PP's Title and Content layout exported incorrectly

In tdf#169825's fix I tried to correct the layout type
corresponding to AUTOLAYOUT_OBJ, originating from PP's obj
ST_SlideLayoutType to AUTOLAYOUT_TITLE_CONTENT, which had
unexpected side-effects:
PPTX->ODP->PPTX conversion of a 'Title, Content' layout added
placeholder artifact.

Revert that part of the change for now.

Regression from eb338daa90afd569e1b86c058bb88a89fab6a557.

Change-Id: I5ba7ee14c4ae3a3a336b051edee4ca8702b87397
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196169
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
(cherry picked from commit 04e5572c796b63da94aedbd07b2b7bd972422161)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196176
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>